--- a/NotesApp/app/src/main/res/layout/line.xml
+++ b/NotesApp/app/src/main/res/layout/line.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent" android:layout_height="match_parent"
     android:orientation="horizontal"
     android:background="@color/light_blue"
+
     >
     <TextView
         android:id="@+id/textBlock"
@@ -20,5 +21,6 @@
         android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:textSize="30sp"
+        android:clickable="false"
         />
 </LinearLayout>
