--- a/NotesApp/app/src/main/res/layout/activity_modify_notes.xml
+++ b/NotesApp/app/src/main/res/layout/activity_modify_notes.xml
@@ -11,29 +11,27 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@drawable/borderline"
 
         >
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Edit Noted"
+            android:text="Edit Note"
             android:textSize="35sp"
             android:layout_marginStart="20sp"
 
             android:textAlignment="center"
             android:id="@+id/take_photo"
             />
-        <TextView
+        <Button
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentEnd="true"
-            android:background="@drawable/borderline"
             android:text="Done"
             android:onClick="done"
             android:textSize="24sp"
             >
-        </TextView>
+        </Button>
     </RelativeLayout>
     <LinearLayout
         android:layout_width="match_parent"
@@ -58,12 +56,12 @@
             >
         </EditText>
     </LinearLayout>
+
     <LinearLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:layout_marginTop="10sp"
-
     >
 
         <TextView
