Post-submission update. Fixed the RecyclerView display and linking. Tag linking successful now. Returning from EditNote to NoteDisplayActivity will not cause it to break anymore when the title changes.

--- a/NotesApp/app/src/main/res/layout/activity_main.xml
+++ b/NotesApp/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="10sp"
+    android:background="@color/grey"
     tools:context=".MainActivity">
     <RelativeLayout
         android:layout_width="match_parent"
