--- a/NotesApp/app/src/main/res/layout/activity_modify_notes.xml
+++ b/NotesApp/app/src/main/res/layout/activity_modify_notes.xml
@@ -102,14 +102,12 @@
             android:textSize="30sp" />
 
         <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
+            android:layout_width="50sp"
+            android:layout_height="50sp"
             android:src="@drawable/camera"
             android:layout_alignParentEnd="true"
             android:id="@+id/camera"
-
-            android:layout_marginEnd="10sp"
-            android:layout_marginBottom="10sp"
+            android:layout_centerVertical="true"
             android:background="@drawable/borderline"
             android:onClick="takePicture"
             />
