--- a/NotesApp/app/src/main/res/values/colors.xml
+++ b/NotesApp/app/src/main/res/values/colors.xml
@@ -12,5 +12,8 @@
     <color name="colorAccent">#03DAC5</color>
     <color name="light_blue">#84A6D4</color>
     <color name="orange">#f3b762</color>
+    <color name="blue">#3F51B5</color>
     <color name="yellow">#f6e884</color>
+    <color name="light_green">#D33BD1A2</color>
+    <color name="grey">#CCB0B0</color>
 </resources>
